# spqs

./: .gitignore  CMakeLists.txt  PI_HANDOFF_STATUS_2026-03-02.md  PI_PROGRESS_SUMMARY_2026-03-03.md  README.md
baselines/: osqp_wrapper.cpp  qpoases_wrapper.cpp
benches/: bench_baselines.cpp  bench_feasibility_only.cpp  bench_oracle_correctness.cpp  bench_projector.cpp
configs/: claim_block256_burst.yaml  claim_block256_correlated.yaml  default_block256.yaml  default_block256_debug.yaml  default_block256_gatefast.yaml  stress_degenerate.yaml  sweep_blocks.yaml  sweep_n.yaml
include/spqs/: active_set.hpp  alloc_counter.hpp  arena.hpp  assert.hpp  baselines.hpp  block_layout.hpp  brute_force_scan.hpp  chol_rank1.hpp  cholesky_update.hpp  config.hpp  config_loader.hpp  constraints_global.hpp  constraints_local.hpp  counters.hpp  fp_cert.hpp  hdr_histogram.hpp  linalg_small.hpp  logschema.hpp  projector.hpp  rhs.hpp  rng.hpp  safefallback.hpp  stream_gen.hpp  structure_validator.hpp  timing.hpp  types.hpp  violator_oracle.hpp  violator_types.hpp
src/: alloc_counter.cpp  arena.cpp  block_layout.cpp  brute_force_scan.cpp  chol_rank1.cpp  cholesky_update.cpp  config_loader.cpp  constraints_global.cpp  constraints_local.cpp  counters.cpp  fp_cert.cpp  linalg_small.cpp  logschema.cpp  projector.cpp  safefallback.cpp  stream_gen.cpp  structure_validator.cpp  timing.cpp  violator_oracle.cpp
tests/: test_chol_rank1_insert_remove_matches_refactor.cpp  test_cholesky_update.cpp  test_fp_cert_soundness.cpp  test_oracle_inactive_vs_bruteforce.cpp  test_oracle_vs_bruteforce.cpp  test_projector_vs_reference.cpp  test_stage6_baselines_and_logs.cpp
tools/: check_zero_alloc.sh  parse_perf_stat.py  plot_all.py  run_bench.py  run_linux_perf_gates.sh  run_stage6_gates.sh  run_sweep.py  run_wow_eval.py
